--- a/app/assets/style/page/_worship.scss
+++ b/app/assets/style/page/_worship.scss
@@ -26,19 +26,18 @@
   right: -18px;
 }
 .bg{
-  width: 100%;
   height: 585px;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
   &-desk{
-    background-image: url(/assets/images/desk.jpg);
+    background-image: url(../../assets/images/desk.jpg);
   }
   &-Shuwen{
-    background-image: url(/assets/images/shuwen.png);
+    background-image: url(../../assets/images/shuwen.png);
   }
   &-worship{
-    background-image: url(/assets/images/worship.gif);
+    background-image: url(../../assets/images/worship.gif);
   }
 }
 
@@ -50,5 +49,24 @@
 @media (max-width: 767.98px) {
   .line {
     width: 56%;
+  }
+}
+
+@include media-breakpoint-down(sm) { 
+  .worship{
+    &-btn{
+      display: block;
+      width: 100%;
+    }
+    &-sacrifice{
+      height: 20px;
+      width: 20px;
+    }
+    &-thanks-text{
+      font-size: 20px;
+    }
+  }
+  .bg{
+    height: 185px;
   }
 }
