--- a/app/assets/style/page/_worship.scss
+++ b/app/assets/style/page/_worship.scss
@@ -31,13 +31,13 @@
   background-position: center center;
   background-repeat: no-repeat;
   &-desk{
-    background-image: url(../images/desk.jpg);
+    background-image: url(../../assets/images/desk.jpg);
   }
   &-Shuwen{
-    background-image: url(../images/Shuwen.png);
+    background-image: url(../../assets/images/Shuwen.png);
   }
   &-worship{
-    background-image: url(../images/worship.gif);
+    background-image: url(../../assets/images/worship.gif);
   }
 }
 
