dev - 線上祭拜無障礙修改

--- a/app/assets/style/page/_worship.scss
+++ b/app/assets/style/page/_worship.scss
@@ -40,7 +40,16 @@
     background-image: url(../../assets/images/worship.gif);
   }
 }
-
+.a{
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -ms-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+.b{
+  opacity: 0;
+}
 @media (max-width: 991.98px) {
   .line {
     width: 68%;
