--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -12,8 +12,8 @@
 body {
   color: $secondary;
 }
-.min-h{
-  min-height: 650px;
+.content{
+  min-height: calc(100vh - 112px - 258px);
 }
 .border-width {
   border-left: 5px solid $primary;
