--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -72,7 +72,7 @@ body {
 .navbar-title,
 .navbar-title span {
   @include media-breakpoint-down(md) {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 .bg-md-white {
